# Paillier_rsc

./: Cargo.toml  ExactMatch  ExactMatchCorrigé  MainExactMatch  crypto_error.rs  lib.rs  main.rs  modExactMatch
crypto_error/: crypto_error.rs
exactmatch/: exactmatch.rs  main.rs  mod.rs
fiore_catalano/: mod.rs
fiore_catalano/cf_add/: cf_add.rs  cf_add_dec.rs  mod.rs
fiore_catalano/cf_encrypt/: cf_encrypt.rs  cf_encrypt_mask.rs
fiore_catalano/cf_mul/: cf_mul.rs
fiore_catalano/cf_mul_dec/: cf_mul_dec.rs  mod.rs
key_management/: key_registry.rs  key_storage.rs  mod.rs
keys/: keypair.json  public_key.json  secret_key.json
montgomery/: montgomery.rs
paillier/math/: math.rs  mod.rs
paillier/p_decrypt/: mod.rs  p_decrypt.rs
paillier/p_encrypt/: mod.rs  p_encrypt.rs
paillier/p_keygen/: mod.rs  p_keygen.rs
paillier_kea/: mod.rs  paillier_kea_decrypt.rs  paillier_kea_encrypt.rs  paillier_kea_img_verif.rs  paillier_kea_keygen.rs
src/: lib.rs  main.rs
src/base de donnes/: base_A_1000.csv  base_A_1000_600.csv  base_A_15000.csv  base_A_2000_1500match.csv  base_A_2000_common750.csv  base_A_3000.csv  base_A_30000_27000match.csv  base_B_1000.csv  base_B_1000_600.csv  base_B_15000.csv  base_B_2000_1500match.csv  base_B_2000_common750.csv  base_B_3000.csv  base_B_30000_27000match.csv
src/crypto_error/: mod.rs
src/exactmatch/: exactmatch.rs  mod.rs
src/fiore_catalano/cf_add/: cf_add.rs  cf_add_dec.rs
src/fiore_catalano/cf_encrypt/: cf_encrypt.rs  cf_encrypt_mask.rs  mod.rs
src/fiore_catalano/cf_mul/: cf_mul.rs  mod.rs
src/fiore_catalano/cf_mul_dec/: cf_mul_dec.rs
src/karatsuba_mul/: karatsuba_mul.rs  mod.rs
src/key_management/: key_registry.rs
src/keys/: keypair.json  public_key.json  secret_key.json
src/main_testeur/: main.rs  main_exactmatch.rs  main_metrics.rs
src/net_protocol/: mod.rs  net_protocol.rs
src/paillier/: mod.rs
src/paillier/math/: math.rs
src/paillier/p_encrypt/: p_encrypt.rs
src/paillier/p_keygen/: p_keygen.rs
src/paillier_kea/: paillier_kea_decrypt.rs
